--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10005,7 +10005,7 @@ h3 {
 
 .welcomebackground
 {
-  background-image: url("/storage/cove_images/backgroundimage3.jpg");
+  background-image: url("https://cdn.pixabay.com/photo/2016/04/01/00/08/toronto-1298016_960_720.jpg");
   height: 100%;
 
   /* Center and scale the image nicely */
